add orders block

--- a/src/index.html
+++ b/src/index.html
@@ -232,12 +232,13 @@
         </div>
         <img src="./img/instagram/insta_title.png" class="instagram__logo" alt="">
     </section>
+
     <section class="ambassadors innerWrapper">
         <div class="wrapper ambassadors__bg">
             <div class="ambassadors__title titleText">Амбассадоры</div>
             <div class="ambassadors__filter  filter">
-                <select class="ambassadors__select filter__select" name="country">
-                    <option class="filter__option ambassadors__option" selected><img src="./img/ambassadors/ru.png">
+                <select class="ambassadors__select filter__select" name="country" size="1">
+                    <option class="filter__option ambassadors__option" selected>
                         Россия
                     </option>
                     <option class="filter__option ambassadors__option">Украина</option>
@@ -349,6 +350,85 @@
                             &#10141;
                         </li>
                     </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="orders innerWrapper">
+        <div class="wrapper">
+            <div class="orders__title titleText titleText--white titleText--center">Как стать частью squash4friends
+            </div>
+            <div class="orders__container">
+                <div class="orders__item orderBlock">
+                    <div class="orderBlock__main">
+                        <div class="orderBlock__content">
+                            <div class="orderBlock__title">
+                                Хочу <span class="red">попробовать</span> сквош, где
+                                можно?
+                            </div>
+                            <div class="orderBlock__description">
+                                <div class="orderBlock__subTitle logoSymbol">
+                                    Найди удобный для себя клуб, напиши амбассадору — попробуй сквош!
+                                </div>
+                                <div class="orderBlock__text">
+                                    В рамках программы «Подари другу сквош» мы приглашаем на ознакомительную тренировку
+                                    любого знакомого, друга, подписчика. С нас – бесплатный корт и бесплатная
+                                    тренировка. От вас – честный пост в соцсетях (ФБ, Инстаграм или ВК) о тренировке с
+                                    хештегом #squash4friends.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="orderBlock__img">
+                            <img class="orderBlock__picture" src="./img/orders/women.png" alt="">
+                        </div>
+                    </div>
+                    <div class="orderBlock__CTA orderCTA">
+                        <div class="orderCTA__item linkBlock">
+                            <button class="linkBlock__item linkBlock__item--red orderCTA__link">Попробовать
+                                сквош &rarr;
+                            </button>
+                        </div>
+                        <div class="orderCTA__item orderCTA__item--min linkBlock">
+                            <button class="linkBlock__item linkBlock__item--white orderCTA__link">Карта клубов</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="orders__item orderBlock">
+                    <div class="orderBlock__main">
+                        <div class="orderBlock__content">
+                            <div class="orderBlock__title">
+                                Как стать <span class="red">амбассадором?</span>
+                            </div>
+                            <div class="orderBlock__description">
+                                <div class="orderBlock__subTitle logoSymbol">
+                                    Отправь заявку, чтобы стать амбассадором в своём городе!
+                                </div>
+                                <div class="orderBlock__text">
+                                    #squash4friends — волонтерское движение, несущее сквош в массы! прикол в том,
+                                    чтобы привлечь не конкретных людей, а расширить круг осведомленности об этом виде
+                                    спорта! Амбассадорами уже стали чемпион России <a class="instaLink red"
+                                                                                      href="https://www.instagram.com/vladtitov97/">@vladtitov97</a>
+                                    и владелец клуба «Москва» <a class="instaLink red"
+                                                                 href="https://www.instagram.com/ivnborodin/">@ivnborodin
+
+                                </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="orderBlock__img">
+                            <img class="orderBlock__picture" src="./img/orders/women.png" alt="">
+                        </div>
+                    </div>
+                    <div class="orderBlock__CTA orderCTA">
+                        <div class="orderCTA__item linkBlock">
+                            <button class="linkBlock__item linkBlock__item--red orderCTA__link">Стать амбассадором &rarr;
+                            </button>
+                        </div>
+                        <div class="orderCTA__item orderCTA__item--min linkBlock">
+                            <a class="linkBlock__item linkBlock__item--white orderCTA__link">Все амбассадоры</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
