--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
     <link href="https://fonts.googleapis.com/css?family=Bebas+Neue|Lato&display=swap" rel="stylesheet">
     <link href="http://allfont.ru/allfont.css?fonts=bebas-neue" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="./css/style.css">
+    <script src="https://api-maps.yandex.ru/2.1/?apikey=60daab00-c1b5-4273-b4fc-87064659e905&lang=ru_RU" type="text/javascript">
+    </script>
 </head>
 <body>
 <section class="topBar">
@@ -433,6 +435,8 @@
             </div>
         </div>
     </section>
+
+    <section class="map" id="map"></section>
     <section class="articles innerWrapper">
         <div class="wrapper">
             <div class="articles__title titleText">Полезные статьи</div>
